// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GameTile> tile Snapshot matches current snapshot for can move 1`] = `
<div
  class="player1 hex tile tilecanmove"
  draggable="true"
  tabindex="0"
  title="Player-1 tileCanMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilecanmove"
    />
  </svg>
</div>
`;

exports[`<GameTile> tile Snapshot matches current snapshot for no moves 1`] = `
<div
  class="player0 hex tile tilenomove"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilenomove"
    />
  </svg>
</div>
`;

exports[`<GameTile> tile Snapshot matches current snapshot for when stacked 1`] = `
<div
  class="player0 hex stacked tile tilenomove"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilenomove"
    />
  </svg>
</div>
`;

exports[`<GameTile> tile render has creature 1`] = `
<div
  class="player1 hex tile tilecanmove"
  draggable="true"
  tabindex="0"
  title="Player-1 tileCanMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilecanmove"
    />
  </svg>
</div>
`;

exports[`<GameTile> tile render has creature 2`] = `
<div
  class="player0 hex tile tilenomove"
  title="Player-0 tileNoMove"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
    <use
      class="creature"
      href="#tilenomove"
    />
  </svg>
</div>
`;
